--- a/EarthNews/View/Cell/CustomTableViewCell.xib
+++ b/EarthNews/View/Cell/CustomTableViewCell.xib
@@ -9,18 +9,36 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="CustomTableViewCell" rowHeight="263" id="KGk-i7-Jjw" customClass="ArticleTableViewCell" customModule="EarthNews" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="444" height="263"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="CustomTableViewCell" rowHeight="273" id="KGk-i7-Jjw" customClass="ArticleTableViewCell" customModule="EarthNews" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="631" height="273"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="444" height="263"/>
+                <rect key="frame" x="0.0" y="0.0" width="631" height="273"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <stackView opaque="NO" contentMode="scaleToFill" fixedFrame="YES" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="AYE-Ox-5Eo">
-                        <rect key="frame" x="20" y="15" width="388" height="150"/>
+                        <rect key="frame" x="20" y="15" width="456" height="150"/>
                         <subviews>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="2e2-bh-mo8">
+                                <rect key="frame" x="0.0" y="0.0" width="60" height="150"/>
+                                <subviews>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="vRm-Ut-8jy">
+                                        <rect key="frame" x="0.0" y="0.0" width="60" height="60"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="60" id="cJM-F2-Rgg"/>
+                                            <constraint firstAttribute="height" constant="60" id="rbo-oh-RoT"/>
+                                        </constraints>
+                                    </imageView>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ldB-Yp-1oK">
+                                        <rect key="frame" x="9.5" y="60" width="41.5" height="90"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                            </stackView>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="24" translatesAutoresizingMaskIntoConstraints="NO" id="qsS-JP-Jje">
-                                <rect key="frame" x="0.0" y="0.0" width="230" height="150"/>
+                                <rect key="frame" x="68" y="0.0" width="230" height="150"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="252" horizontalCompressionResistancePriority="751" text="Date" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5Bn-kr-D9x" userLabel="DateLabel">
                                         <rect key="frame" x="0.0" y="5" width="230" height="14.5"/>
@@ -59,7 +77,7 @@
                                 </constraints>
                             </stackView>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="GA0-zd-Krh">
-                                <rect key="frame" x="238" y="0.0" width="150" height="150"/>
+                                <rect key="frame" x="306" y="0.0" width="150" height="150"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="150" id="GbO-o1-MVp"/>
                                     <constraint firstAttribute="height" constant="150" id="cnP-DH-m92"/>
@@ -77,7 +95,7 @@
                 <outlet property="subtitle" destination="Hbd-Dv-egq" id="GYF-4I-KjZ"/>
                 <outlet property="title" destination="Jib-oJ-mzG" id="5lp-c5-Bce"/>
             </connections>
-            <point key="canvasLocation" x="-162.31884057971016" y="72.65625"/>
+            <point key="canvasLocation" x="29.710144927536234" y="29.129464285714285"/>
         </tableViewCell>
     </objects>
 </document>
