Change TableView Controller to ViewController with delegate and dataSource.

--- a/EarthNews/View/Base.lproj/Main.storyboard
+++ b/EarthNews/View/Base.lproj/Main.storyboard
@@ -10,13 +10,13 @@
         <!--Article Table View Controller-->
         <scene sceneID="8NQ-RF-IKR">
             <objects>
-                <tableViewController id="vle-vU-zN1" customClass="ArticleTableViewController" customModule="EarthNews" customModuleProvider="target" sceneMemberID="viewController">
+                <tableViewController id="vle-vU-zN1" customClass="ArticleTableViewController" customModule="EarthNews" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" id="I4l-tg-HJM">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="qea-gm-ldU">
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="ArticleTableViewCell" id="qea-gm-ldU" customClass="ArticleTableViewCell" customModule="EarthNews" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="44.5" width="414" height="43.5"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="qea-gm-ldU" id="J8M-VX-uiZ">
