--- a/EarthNews/View/Base.lproj/Main.storyboard
+++ b/EarthNews/View/Base.lproj/Main.storyboard
@@ -1,39 +1,64 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="vle-vU-zN1">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="MwC-RS-6Fv">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
+        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Article Table View Controller-->
-        <scene sceneID="8NQ-RF-IKR">
+        <!--Live Article View Controller-->
+        <scene sceneID="kW4-Rb-ZRD">
             <objects>
-                <tableViewController id="vle-vU-zN1" customClass="ArticleTableViewController" customModule="EarthNews" sceneMemberID="viewController">
-                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" id="I4l-tg-HJM">
+                <viewController id="Tcw-f5-HnE" customClass="LiveArticleViewController" customModule="EarthNews" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="Zud-gR-rpZ">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <viewLayoutGuide key="safeArea" id="Jgo-yQ-cOm"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                        <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="ArticleTableViewCell" id="qea-gm-ldU" customClass="ArticleTableViewCell" customModule="EarthNews" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="44.5" width="414" height="43.5"/>
-                                <autoresizingMask key="autoresizingMask"/>
-                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="qea-gm-ldU" id="J8M-VX-uiZ">
-                                    <rect key="frame" x="0.0" y="0.0" width="414" height="43.5"/>
-                                    <autoresizingMask key="autoresizingMask"/>
-                                </tableViewCellContentView>
-                            </tableViewCell>
-                        </prototypes>
-                        <connections>
-                            <outlet property="dataSource" destination="vle-vU-zN1" id="3y0-Rs-vqM"/>
-                            <outlet property="delegate" destination="vle-vU-zN1" id="B6T-KC-Lk5"/>
-                        </connections>
-                    </tableView>
-                </tableViewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="tyR-wU-g7M" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="P25-3t-9qL"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="e5v-BR-YSt" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="267" y="3"/>
+            <point key="canvasLocation" x="2005.7971014492755" y="-7.3660714285714279"/>
+        </scene>
+        <!--Item-->
+        <scene sceneID="tXV-qN-FHD">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="Rcm-hu-Uw8" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Item" id="IK6-97-yE5"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="jcd-Hz-gaB">
+                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="Tcw-f5-HnE" kind="relationship" relationship="rootViewController" id="Qsp-hH-Jr9"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="dPC-jR-CUb" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1095.6521739130435" y="-7.3660714285714279"/>
+        </scene>
+        <!--Tab Bar Controller-->
+        <scene sceneID="ZDa-W5-UDC">
+            <objects>
+                <tabBarController automaticallyAdjustsScrollViewInsets="NO" id="MwC-RS-6Fv" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="Zi9-jy-6L8">
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    </tabBar>
+                    <connections>
+                        <segue destination="Rcm-hu-Uw8" kind="relationship" relationship="viewControllers" id="ilZ-wQ-N1a"/>
+                    </connections>
+                </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="vFA-tV-MHf" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="185.50724637681162" y="-7.3660714285714279"/>
         </scene>
     </scenes>
     <resources>
