--- a/EarthNews/View/Cell/ArticleTableViewCell.xib
+++ b/EarthNews/View/Cell/ArticleTableViewCell.xib
@@ -16,57 +16,62 @@
                 <rect key="frame" x="0.0" y="0.0" width="631" height="273"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <stackView opaque="NO" contentMode="scaleToFill" fixedFrame="YES" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="AYE-Ox-5Eo">
-                        <rect key="frame" x="20" y="30" width="446" height="150"/>
+                    <stackView opaque="NO" contentMode="scaleToFill" spacing="3" translatesAutoresizingMaskIntoConstraints="NO" id="AYE-Ox-5Eo">
+                        <rect key="frame" x="6" y="11" width="246" height="150"/>
                         <subviews>
-                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="2e2-bh-mo8">
-                                <rect key="frame" x="0.0" y="0.0" width="50" height="150"/>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="2e2-bh-mo8" userLabel="DatabaseIcon">
+                                <rect key="frame" x="0.0" y="0.0" width="30" height="150"/>
                                 <subviews>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="vRm-Ut-8jy">
-                                        <rect key="frame" x="10" y="0.0" width="30" height="30"/>
+                                        <rect key="frame" x="0.0" y="23" width="30" height="30"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="30" id="cJM-F2-Rgg"/>
                                             <constraint firstAttribute="height" constant="30" id="rbo-oh-RoT"/>
                                         </constraints>
                                     </imageView>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ldB-Yp-1oK">
-                                        <rect key="frame" x="0.0" y="30" width="50" height="120"/>
+                                        <rect key="frame" x="0.0" y="53" width="30" height="97"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                 </subviews>
+                                <constraints>
+                                    <constraint firstAttribute="trailing" secondItem="vRm-Ut-8jy" secondAttribute="trailing" constant="1" id="WpL-fu-H8B"/>
+                                    <constraint firstItem="vRm-Ut-8jy" firstAttribute="top" secondItem="2e2-bh-mo8" secondAttribute="top" constant="23" id="o9Z-pP-hsy"/>
+                                    <constraint firstItem="vRm-Ut-8jy" firstAttribute="leading" secondItem="2e2-bh-mo8" secondAttribute="leading" id="p5R-Wc-69J"/>
+                                </constraints>
                             </stackView>
-                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="24" translatesAutoresizingMaskIntoConstraints="NO" id="qsS-JP-Jje">
-                                <rect key="frame" x="58" y="0.0" width="230" height="150"/>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="24" translatesAutoresizingMaskIntoConstraints="NO" id="qsS-JP-Jje" userLabel="Body">
+                                <rect key="frame" x="33" y="0.0" width="60" height="150"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="252" horizontalCompressionResistancePriority="751" text="Date" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5Bn-kr-D9x" userLabel="DateLabel">
-                                        <rect key="frame" x="0.0" y="5" width="230" height="12"/>
+                                        <rect key="frame" x="0.0" y="5" width="60" height="12"/>
                                         <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="10"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="252" text="Title" textAlignment="natural" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="Jib-oJ-mzG" userLabel="TitleLabel">
-                                        <rect key="frame" x="0.0" y="22" width="230" height="19"/>
+                                        <rect key="frame" x="0.0" y="22" width="60" height="19"/>
                                         <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="16"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="TopLeft" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="751" text="description" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Hbd-Dv-egq" userLabel="SubtitleLabel">
-                                        <rect key="frame" x="0.0" y="46" width="230" height="14"/>
+                                        <rect key="frame" x="0.0" y="46" width="60" height="82"/>
                                         <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="12"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="252" text="source" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qmk-Bx-cod" userLabel="SourceLabel">
-                                        <rect key="frame" x="0.0" y="133" width="230" height="12"/>
+                                        <rect key="frame" x="0.0" y="133" width="60" height="12"/>
                                         <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="10"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                 </subviews>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="230" id="MBR-Sa-upw"/>
+                                    <constraint firstAttribute="width" relation="lessThanOrEqual" constant="230" id="MBR-Sa-upw"/>
                                     <constraint firstItem="Jib-oJ-mzG" firstAttribute="top" secondItem="5Bn-kr-D9x" secondAttribute="bottom" constant="5" id="RgN-tW-9zP"/>
                                     <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="150" id="bEF-sX-idF"/>
                                     <constraint firstItem="5Bn-kr-D9x" firstAttribute="top" secondItem="qsS-JP-Jje" secondAttribute="top" constant="5" id="eQw-gJ-jiy"/>
@@ -77,7 +82,7 @@
                                 </constraints>
                             </stackView>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="GA0-zd-Krh">
-                                <rect key="frame" x="296" y="0.0" width="150" height="150"/>
+                                <rect key="frame" x="96" y="0.0" width="150" height="150"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="150" id="GbO-o1-MVp"/>
                                     <constraint firstAttribute="height" constant="150" id="cnP-DH-m92"/>
@@ -86,18 +91,23 @@
                         </subviews>
                     </stackView>
                 </subviews>
+                <constraints>
+                    <constraint firstAttribute="trailing" secondItem="AYE-Ox-5Eo" secondAttribute="trailing" constant="6" id="DNq-vH-NQg"/>
+                    <constraint firstItem="AYE-Ox-5Eo" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="6" id="NfQ-zk-i32"/>
+                    <constraint firstItem="AYE-Ox-5Eo" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" id="reU-lY-28c"/>
+                </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
                 <outlet property="cellImageView" destination="GA0-zd-Krh" id="G7R-v9-Uto"/>
-                <outlet property="databseIconImage" destination="vRm-Ut-8jy" id="iVM-lz-XSN"/>
+                <outlet property="databseIconImageView" destination="vRm-Ut-8jy" id="rmW-e9-86d"/>
                 <outlet property="date" destination="5Bn-kr-D9x" id="1vh-Fy-znK"/>
                 <outlet property="imageView" destination="GA0-zd-Krh" id="clS-7I-lpG"/>
                 <outlet property="source" destination="qmk-Bx-cod" id="C6m-BS-Zeh"/>
                 <outlet property="subtitle" destination="Hbd-Dv-egq" id="GYF-4I-KjZ"/>
                 <outlet property="title" destination="Jib-oJ-mzG" id="5lp-c5-Bce"/>
             </connections>
-            <point key="canvasLocation" x="29.710144927536234" y="29.129464285714285"/>
+            <point key="canvasLocation" x="-1" y="-7"/>
         </tableViewCell>
     </objects>
 </document>
